crates/cli/tests/snapshots/empty_let_in__fix_0e4aa3bb93dbc3bef2f131f2211790bceb441105a3e6bd90b3a3c362d0fc8ee0.snap
---
source: crates/cli/tests/empty_let_in.rs
expression: "\"let # keep trailing comment\\nin\\n  null\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,3 @@
-let # keep trailing comment
-in
-  null
+ # keep trailing comment
+null
