crates/cli/tests/snapshots/empty_let_in__fix_e0c50454875e093d4b4d5d9f2c47bc9c792d8cca73cf6e05fb0ef1e3ad910a21.snap
---
source: crates/cli/tests/empty_let_in.rs
expression: "\"let\\n  # preserve the comment while fixing\\nin\\nnull\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,4 @@
-let
+
   # preserve the comment while fixing
-in
 null
