crates/cli/tests/snapshots/empty_let_in__lint_0e4aa3bb93dbc3bef2f131f2211790bceb441105a3e6bd90b3a3c362d0fc8ee0.snap
---
source: crates/cli/tests/empty_let_in.rs
expression: "\"let # keep trailing comment\\nin\\n  null\\n\""
---
[02] Warning: Useless let-in expression
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ╭─▶ let # keep trailing comment
   ┆ ┆   
 3 │ ├─▶   null
   │ │            
   │ ╰──────────── This let-in expression has no entries
───╯
