crates/cli/tests/snapshots/empty_let_in__lint_69e2d9e348a3b7903ae167887886709559b8d299d9ea097621bbbab32e6f3bfa.snap
---
source: crates/cli/tests/empty_let_in.rs
expression: "\"let\\n  # don't fix this, we have a comment\\n  # raise the lint though\\nin\\nnull\\n\""
---
[02] Warning: Useless let-in expression
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ╭─▶ let
   ⋮ ⋮   
 5 │ ├─▶ null
   · │          
   · ╰────────── This let-in expression has no entries
───╯
