crates/cli/tests/snapshots/empty_let_in__lint_e0c50454875e093d4b4d5d9f2c47bc9c792d8cca73cf6e05fb0ef1e3ad910a21.snap
---
source: crates/cli/tests/empty_let_in.rs
expression: "\"let\\n  # preserve the comment while fixing\\nin\\nnull\\n\""
---
[02] Warning: Useless let-in expression
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ╭─▶ let
   ┆ ┆   
 4 │ ├─▶ null
   │ │          
   │ ╰────────── This let-in expression has no entries
───╯
